--- a/style.css
+++ b/style.css
@@ -681,24 +681,48 @@ body {
 .practice {
     padding: 125px 0 80px 0;
 }
-
+@media (max-width:993px) {
+    .practice {
+        padding: 40px 0 80px 0;
+    }
+}
+@media (max-width:767) {
+    .practice {
+        padding: 0px 0 40px 0;
+    }
+}
 .practice____container {}
 
 
 .practice__heading {
     margin: 0 0 45px 0;
 }
-
+@media (max-width:767) {
+    .practice__heading {
+        margin: 0 0 25px 0;
+    }
+}
 .practice__body {
-    margin: 0 -20px;
+    margin: 0 -20px -30px;
     display: flex;
     flex-wrap: wrap;
 }
 
 .practice__column {
     padding: 0 20px;
+    margin-bottom: 30px;
     
     flex: 0 1 25%;
+}
+@media (max-width:1040px) {
+    .practice__column {
+        flex: 0 1 50%;
+    }
+}
+@media (max-width:630px) {
+    .practice__column {
+        flex: 0 1 100%;
+    }
 }
 
 .practice__item {
