--- a/style.css
+++ b/style.css
@@ -799,6 +799,10 @@ letter-spacing: 0.1px;
 
 .whoweare__container{}
 
+.whoweare__top:not(:last-child){
+    margin: 0 0 50px 0;
+}
+
 .whoweare__heading {
     margin: 0 0 100px 0;
 }
@@ -806,12 +810,21 @@ letter-spacing: 0.1px;
 
 .whoweare__title {}
 
+
+
+.whoweare__title:not(:last-child) {
+    margin: 0 0 10px 0;
+}
+
 .whoweare__text {}
 
-
+/* .whoweare__text:not(:last-child) {
+    margin: 0 0 50px 0;
+} */
 
 .whoweare__body {
     display: flex;
+    align-items: flex-start;
 }
 
 .whoweare__video {
@@ -831,18 +844,79 @@ object-fit: cover;
 
 .whoweare__content{
     flex: 1 1 auto;
-    padding: 0 0 0 121px;
-} 
+    padding: 20px 0 0 121px;
+}
+@media (max-width:1080px) {
+    .whoweare__content{
+        
+        padding: 0 0 0 50px;
+    }
+}
+@media (max-width:992px) {
+    .whoweare__content{
+        
+        padding: 0 0 0 0px;
+    }
+}
+@media (max-width:950px) {
+    .whoweare__content{
+        padding: 0 0 0 0px;
+    }
+    .whoweare__video{
+        padding: 0 0 56.25% 0;
+    }
+    .whoweare__video:not(:last-child){
+        margin: 50px 0 0 0px;
+    }
+    .whoweare__body {
+        flex-direction:column-reverse ;
+        align-items: stretch;
+        
+    }
+    .whoweare__title {
+        font-size: 24px;
+    }
+    .whoweare__heading {
+        margin: 0 0 30px 0;
+    }
+    .whoweare {
+        padding: 50px 0 50px 0;
+    }
+}
+@media (max-width:767px) {
+    .whoweare {
+        padding: 20px 0 50px 0;
+    }
+    .whoweare__video:not(:last-child){
+        margin: 30px 0 0 0px;
+    }
+    .whoweare__top:not(:last-child){
+        margin: 0 0 30px 0;
+    }
+}
 
-.whoweare__items {}
+.whoweare__items {
+   
+}
 
+.whoweare__items:not(:last-child) {
+    margin: 0 0 30px 0;
+}
 .whoweare__item {}
 
-.item-whoweare {}
 
-.item-whoweare__icon {}
+.item-whoweare {
+    display: flex;
+}
 
-.item-whoweare__body {}
+.item-whoweare__icon {
+flex: 0 0 32px;
+}
+
+.item-whoweare__body {
+    flex: 1 1 auto;
+    padding-left: 20px;
+}
 
 .item-whoweare__title {font-weight: 700;
     font-size: 16px;
@@ -868,11 +942,162 @@ object-fit: cover;
     color: #737373;
 }
 
-.item-whoweare__text:not(:last-child) {
-    margin: 0 0 50px 0;
+
+/*------clients----------------------------------*/
+.page__clients {
+    margin-bottom: 10px;
 }
 
-/*----------------------------------------*/
+.clients {
+    padding: 50px 0;
+}
+
+@media (max-width:767px) {
+    .clients {
+        padding: 30px 0;
+    }
+}
+
+.clients__container{
+    
+} 
+
+.clients__items {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.clients__item {
+    padding: 8px 15px;
+    flex: 0 1 16.6667%;
+    text-align: center;
+    min-width:140px ;
+}
+.clients__item img{
+    max-width: 100%;
+}
+
+/*---subscribe------------------*/
+.page__subscribe {}
+
+.subscribe {
+    position: relative;
+    padding-bottom: 20px;
+}
+
+.subscribe::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 77px;
+    z-index: -1;
+    background: #252B42;
+}
+
+.subscribe__container {}
+
+
+.subscribe__body {
+    padding: 30px 50px;
+    background: #17213C;
+border-radius: 2px;
+}
+@media (min-width:1070px) {
+    .subscribe__body {
+        margin: 0 30px;
+    }
+}
+@media (min-width:810px) {
+    .subscribe__body {
+
+        display: flex;
+        justify-content: space-between;
+        
+    }
+}
+
+.subscribe__title {
+    /* flex: 0 1 50%; */
+    
+
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 133%;
+/* or 133% */
+
+letter-spacing: 0.1px;
+
+/* light-text-color */
+
+color: #FFFFFF;
+}
+@media (max-width:810px) {
+    .subscribe__title {
+        margin: 0 0 20px 0;
+    }
+    .subscribe__body{
+        margin: 0 -15px;
+        padding: 20px 15px;
+    }
+}
+@media (min-width:810px) {
+    .subscribe__title {
+        max-width: 266px;
+    }
+}
+
+.subscribe_form {
+    flex: 0 1 50%;
+    display: flex;
+    align-items: center;
+}
+
+.subscribe__input {
+    width: 100%;
+    flex:1 1 auto;
+    min-height: 58px;
+    padding: 0 20px;
+    background: #F9F9F9;
+    border: 1px solid #E6E6E6;
+    border-radius: 5px 0 0 5px;
+    border-right: 0;
+
+color: #737373;
+}
+
+.subscribe__input:focus{
+    color: black;
+}
+
+.subscribe__button {
+    background: #FF7B47;
+border: 1px solid #E6E6E6;
+border-radius: 0px 5px 5px 0px;
+display: flex;
+min-height: 58px;
+justify-content: center;
+align-items: center;
+text-align: center;
+color: #fff;
+padding: 0 22px;
+}
+@media (max-width:810px) {
+    .subscribe__button {
+        padding: 0 15px;
+    }
+    .subscribe__input{
+        padding: 0 15px;
+    }
+}
+
+/*-----------------------------------*/
 /*-----подвал------------------------------*/
 
 .footer {}
