--- a/style.css
+++ b/style.css
@@ -1097,7 +1097,135 @@ padding: 0 22px;
     }
 }
 
-/*-----------------------------------*/
+/*---getintouch--------------------------------*/
+.page__getintouch {}
+
+.getintouch {
+    padding: 80px 0 135px 0;
+}
+
+
+
+.getintouch__container{} 
+
+.getintouch__heading {
+    padding: 0 0 80px 0;
+}
+
+
+
+.getintouch__title {}
+
+.getintouch__text {}
+
+
+.getintouch__items {
+    
+}
+
+@media (min-width:992px) {
+    .getintouch__items {
+        display: flex;
+        align-items: center;
+    }
+}
+
+.getintouch__item {
+    flex: 0 1 33.333%;
+}
+
+
+.item-getintouch {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    padding: 50px 15px;
+}
+.item-getintouch_active{
+    padding: 80px 15px;
+    background: #252B42;
+    color: #fff;
+}
+
+.item-getintouch > *:not(:last-child){
+    margin: 0 0 15px 0;
+}
+
+.item-getintouch__icon {}
+
+.item-getintouch__icon:not(:last-child){
+    margin: 0 0 15px 0;
+}
+
+.item-getintouch__emails {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.item-getintouch__email {
+    color: inherit;
+    font-weight: 600;
+    line-height: 150%;
+    font-size: 16px;
+}
+.item-getintouch__email:hover {
+    text-decoration: underline;
+}
+.item-getintouch__label {
+    font-weight: 700;
+font-size: 16px;
+line-height: 150%;
+    letter-spacing: 0.1px;
+
+    /* text-color */
+    
+    color: inherit;
+}
+
+.item-getintouch__button {
+    min-height: 44px;
+    padding: 5px 20px;
+    border: 1px solid #FF7B47;
+border-radius: 5px;
+
+font-weight: 600;
+font-size: 14px;
+line-height: 142%;
+/* identical to box height, or 171% */
+
+display: flex;
+
+align-items: center;
+justify-content: center;
+letter-spacing: 0.2px;
+
+/* primary-color */
+
+color: #FF7B47;
+transform: all 0.3s ease 0s;
+}
+.item-getintouch__button:hover{
+    background-color: #FF7B47;
+    color: #fff;
+}
+
+.item-getintouch_active .item-getintouch__button{
+    border: 1px solid #fff;
+    color: #fff;
+}
+
+.item-getintouch_active .item-getintouch__button:hover{
+    background-color: #fff;
+    color: #252B42;
+}
+
+
+
+
 /*-----подвал------------------------------*/
 
 .footer {}
